Enable java 13 preview feature : switch and raw String literals